--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.61.5",
     "react-native-google-places-autocomplete": "^1.4.0",
     "react-native-maps": "0.26.1",
-    "react-native-maps-directions": "^1.7.3"
+    "react-native-maps-directions": "^1.7.3",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
