--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/geolocation": "^2.0.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-dotenv": "^0.2.0",
     "react-native-geocoding": "^0.4.0",
     "react-native-google-places-autocomplete": "^1.4.0",
     "react-native-maps": "0.26.1",
